# CreoQtPlugin

./: .gitignore  LICENSE  README.md
Code/: CMakeLists.txt
Code/CreoQtWidget/: CMakeLists.txt  CreoQtWidget.cpp  CreoQtWidget.h  CreoQtWidget_global.h
Code/Resources/: CreoQtWidget.dat.in
Code/Resources/text/zh_cn/: MenuBarText.txt
